--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@
             padding: 15px;
             box-shadow: var(--glow);
             z-index: 1500;
-            transform: translateX(280px);
-            transition: transform 0.3s ease;
+            transform: translateX(calc(100% + 20px));
+            transition: transform 0.5s cubic-bezier(0.25, 0.46, 0.45, 0.94);
             width: 280px;
             max-width: 280px;
         }
@@ -320,7 +320,7 @@
             max-width: 280px;
             box-shadow: var(--glow);
             z-index: 1400;
-            transition: left 0.3s ease;
+            transition: left 0.5s cubic-bezier(0.25, 0.46, 0.45, 0.94);
         }
         
         .daily-verse.show {
@@ -399,14 +399,12 @@
             background: var(--secondary);
             padding: 30px;
             border-radius: 15px;
-            margin-bottom: 30px;
+            margin: 30px auto;
             box-shadow: var(--glow);
             border: 1px solid rgba(26, 63, 158, 0.3);
             transition: transform 0.3s ease;
             width: 100%;
             max-width: var(--card-max-width);
-            margin-left: auto;
-            margin-right: auto;
         }
         
         .card:hover {
@@ -1090,8 +1088,8 @@
             padding: 15px;
             border-radius: 50%;
             background: rgba(26, 63, 158, 0.1);
-            width: 50px;
-            height: 50px;
+            width: 60px;
+            height: 60px;
             display: flex;
             align-items: center;
             justify-content: center;
